--- a/frontend/src/locale/messages.de.xlf
+++ b/frontend/src/locale/messages.de.xlf
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="8806174020293702272" datatype="html">
@@ -18,7 +18,7 @@
           <context context-type="linenumber">3,6</context>
         </context-group>
         <note priority="1" from="description">about subheader</note>
-      </trans-unit>
+      <target>Ein simpler, open source Kalender Server mit Unterstützung für CalDav</target></trans-unit>
       <trans-unit id="1586172636431071492" datatype="html">
         <source> Learn more about foxCal on </source>
         <context-group purpose="location">
@@ -27,7 +27,7 @@
         </context-group>
         <note priority="1" from="description">text posted just before the github link of foxCal</note>
         <note priority="1" from="meaning">about description</note>
-      </trans-unit>
+      <target>Lerne mehr über foxCal auf</target></trans-unit>
       <trans-unit id="7247085914955145178" datatype="html">
         <source> foxCal is licensed under EUPL v1.2 (EUROPEAN UNION PUBLIC LICENCE v. 1.2)
 </source>
@@ -37,7 +37,7 @@
         </context-group>
         <note priority="1" from="description">license text at the end of the about page</note>
         <note priority="1" from="meaning">about license</note>
-      </trans-unit>
+      <target>foxCal ist Lizenziert unter der EUPL v1.2 (EUROPEAN UNION PUBLIC LICENCE v. 1.2) Lizenz</target></trans-unit>
     </body>
   </file>
 </xliff>
